--- a/templates/public/hotbox-widget.js.twig
+++ b/templates/public/hotbox-widget.js.twig
@@ -1,1 +1,1 @@
-<div class='hotbox-container'><a href='" + data.url + "' target='_blank'><img src='" + this.SERVERURL + "/" + data.image + "' alt='" + data.title + "' /></a></div>
+<div class='hotbox-container'><a href='" + data.url + "' target='_blank'><img src='" + this.SERVERURL + "/" + data.image + "' alt='" + data.description + "' title='" + data.description + "' /></a></div>
